...
            <objects>
                <navigationController id="1HV-cV-pW8" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Account" image="person" catalog="system" selectedImage="person.fill" id="3di-zC-NPP"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zjn-td-i6C">
                        <rect key="frame" x="0.0" y="44" width="428" height="44"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Account ( Username )" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dFn-LB-0nQ">
                                <rect key="frame" x="20" y="225" width="388" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits" textContentType="username"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KGq-L5-eJe">
                                <rect key="frame" x="20" y="267" width="388" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o3T-nl-bt0">
                                <rect key="frame" x="20" y="348" width="388" height="31"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Register"/>
                                <connections>
                                    <segue destination="HaF-as-WMf" kind="show" id="pHu-8B-eKE"/>
...
                                <rect key="frame" x="20" y="309" width="388" height="31"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Login"/>
                                <connections>
                                    <segue destination="VN9-N6-ydl" kind="show" id="nLk-QL-Hnq"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="account ( username )" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gFQ-4x-LgC">
                                <rect key="frame" x="20" y="187" width="388" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits" textContentType="username"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ia2-O9-L26">
                                <rect key="frame" x="20" y="229" width="388" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits" textContentType="email"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="phone" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lBW-LK-KwB">
                                <rect key="frame" x="20" y="271" width="388" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="new-password"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="confirm password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5zR-SX-1TK">
                                <rect key="frame" x="20" y="355" width="388" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
